@@ -243,7 +243,7 @@ a.stats_link.missing span	{color:#000;}
 .title_wrap					{width:960px; margin:0 auto; padding:0 0 40px 0; margin-bottom:40px;}
 .table_wrap					{background-color:#FFF; padding:0; border-radius:8px 8px 0 0; border:1px solid #000; position:relative; width:960px;}
 .table_wrap.main			{padding-bottom:0; border-radius:8px 8px 0 0;}
-.table_wrap.view			{width:960px; margin:0 auto; padding:5px; margin-bottom:40px; border:1px solid #000; box-sizing:border:box;}
+.table_wrap.view			{width:1000px; margin:0 auto; padding:20px; margin-bottom:40px; border:1px solid #000; box-sizing:border:box;}
 
 
 /*	Data Description styles
