@@ -251,7 +251,7 @@ a.stats_link.missing span	{color:#008FFF;}
 .title_wrap				{width:960px; margin:0 auto; padding:0 0 40px 0; margin-bottom:40px;}
 .table_wrap				{background-color:rgba(0,14,32,0.7); padding:0; border-radius:8px 8px 0 0; position:relative; width:960px;}
 .table_wrap.main		{padding-bottom:0; border-radius:8px 8px 0 0;}
-.table_wrap.view		{width:960px; margin:0 auto; padding:5px; margin-bottom:40px; box-sizing:border:box;}
+.table_wrap.view		{width:1000px; margin:0 auto; padding:20px; margin-bottom:40px; box-sizing:border:box;}
 
 
 /*	Data Description styles
@@ -291,7 +291,7 @@ a.csv_download				{display:inline-block; padding:10px; background-color:#FFF; te
 a.csv_download:hover		{background-color:rgba(255,255,255, 0.3); color:#FFF;}
 .table_wrap.view a.csv_download	{display:block;}
 
-.table_alert				{width:100%; text-align:center; padding:20px 0 10px 0; color:#FFF; font-size:18px;}
+.table_alert				{width:100%; text-align:center; padding:25px 0 0 0; color:#FFF; font-size:18px;}
 	
 	
 /*	For url #view=donors & all #view=donor_*
