@@ -393,7 +393,7 @@
 
 #alert_no_iati
 <tr>
-	<td colspan="3" class="alert_no_iati" title="{alert_no_iati_tip_text}">{alert_no_iati_text}</td>
+	<td colspan="10" class="alert_no_iati" title="{alert_no_iati_tip_text}">{alert_no_iati_text}</td>
 </tr>
 
 #alerts_quality
