@@ -1,3 +1,10 @@
+Development Portal (2018-08-24 shi)
+==============================
+Fix alert colspan
+Display humanitarian flag in SAVi
+Update all themes
+
+
 Development Portal (2018-08-21 shi)
 ==============================
 Fix word-break in sector / donor tables for long names in columns
